--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@base2/pretty-print-object": "^1.0.2",
+    "@faker-js/faker": "^8.0.2",
     "@mdx-js/react": "^2.3.0",
     "@neighbourhoods/design-system-styles": "^0.0.3",
     "@storybook/addon-actions": "^7.4.0",
@@ -44,6 +45,7 @@
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.0",
     "wait-on": "^7.0.1"
   },
   "dependencies": {
