refine build for package release

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     "tsBuildInfoFile": "tsconfig.tsbuildinfo",
     "skipLibCheck": true
   },
-  "exclude": ["./dist", "**/*.test.ts"],
+  "exclude": ["./dist", "src/**/*.test.ts"],
 }
