inlude dependencies for resource assessment tray component

--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "wait-on": "^7.0.1"
   },
   "dependencies": {
+    "@holochain/client": "^0.16.2",
+    "@neighbourhoods/client": "^0.0.6",
     "lit": "^2.2.0"
   },
   "version": "0.0.2"
